Adicionado icones e banner

--- a/styles/mediumScreen.css
+++ b/styles/mediumScreen.css
@@ -41,7 +41,7 @@
         position: absolute;
         visibility: hidden;
         top: 10%;
-        left: 20px;
+        left: 10%;
         height: 0;
         padding: 10px;
         outline: none;
