--- a/styles/smallScreen.css
+++ b/styles/smallScreen.css
@@ -43,7 +43,7 @@
         position: absolute;
         visibility: hidden;
         top: 10%;
-        left: 20px;
+        left: 10%;
         height: 0;
         padding: 10px;
         outline: none;
@@ -67,9 +67,10 @@
 
     .main #destaques{
         width: 100%;
-        height: 20%;
-        padding: 20px;
-        border: 1px solid #133840;
+        /* height: 20%; */
+        /* padding: 20px; */
+        /* background: red; */
+        /* border: 1px solid #133840; */
         margin: 0 auto;
         
     }
@@ -93,15 +94,22 @@
         padding: 10px 20px;
         display: flex;
         flex-direction: column;
-        gap: 50px;
+        gap: 30px;
         align-items: center;
         justify-content: center;
         box-shadow: 11px 10px 12px 6px rgba(0,0,0,0.73);
         border-radius: 10px;
     }
 
+    .main #card #btn__favorite{
+        width: 100%;
+        font-size: 1.5rem;
+        display: flex;
+        justify-content: flex-end;
+    }
+
     .main #card a{
-        width: 60%;
+        width: 70%;
     }
 
     .main #card a img{
@@ -121,7 +129,7 @@
         font-size: 1.5rem;
         font-weight: 500;
         /* display: block; */
-        margin-bottom: 20px;
+        /* margin-bottom: 20px; */
     }
     
 
