--- a/styles/mediumScreen.css
+++ b/styles/mediumScreen.css
@@ -2,15 +2,19 @@
 
 @media screen and (min-width: 415px){
     .header{
+        display: flex;
+        justify-content: center;
         height: 10%;
         
     }
 
     .nav{
+        width: 80%;
         height: 100%;
         display: flex;
         justify-content: space-around;
         align-items: center;
+        margin: 0 auto;
         color: #FFF;
     }
 
@@ -41,7 +45,7 @@
         position: absolute;
         visibility: hidden;
         top: 10%;
-        left: 10%;
+        left: 15%;
         height: 0;
         padding: 10px;
         outline: none;
@@ -55,7 +59,7 @@
     }
 
     .main{
-        padding: 20px 10px;
+        padding: 10px 10px 30px;
         height: 100vh - 40%;
     }
 
@@ -64,10 +68,10 @@
     }
 
     .main #destaques{
-        width: 70%;
+        width: 90%;
         height: 20%;
         padding: 20px;
-        border: 1px solid #133840;
+        /* border: 1px solid #133840; */
         margin: 0 auto;
         
     }
@@ -75,12 +79,15 @@
     .main #destaques img{
         width: 100%;
         height: 100%;
+        border-radius: 10px;
         margin: 0 auto;
     }
 
     .main #cards{
+        width: 100%;
         display: grid;
         grid-template-columns: 1fr 1fr;
+        margin: 0 auto;
         column-gap: 20px;
         row-gap: 30px;
         margin-top: 40px;
@@ -97,6 +104,13 @@
         background-color: #FEFFFF;
         box-shadow: 11px 10px 12px 6px rgba(0,0,0,0.73);
         border-radius: 10px;
+    }
+
+    .main #card #btn__favorite{
+        width: 90%;
+        font-size: 1.5rem;
+        display: flex;
+        justify-content: flex-end;
     }
 
     .main #card a{
