--- a/styles/screen.css
+++ b/styles/screen.css
@@ -1,6 +1,10 @@
 @import url(./reset.css);
 
 @media screen and (min-width: 768px) {
+
+    .nav #input__search{
+        left: 18%;
+    }
     .main #destaques{
         width: 60%;
     }
